--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
 .header {
   padding: 80px;
   text-align: center;
-  background: #1abc9c;
+  background: #5dbcd2;
   color: white;
 }
 
@@ -123,8 +123,8 @@ body {
 <body>
 
 <div class="header">
-  <h1>My Website</h1>
-  <p>A <b>responsive</b> website created by me.</p>
+  <h1>StyxNet.</h1>
+  <p>A <b>StyxNet - a open source, uncensored and free</b> social network.</p>
 </div>
 
 <div class="navbar">
