--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
 .header {
   padding: 80px;
   text-align: center;
-  background: #5dbcd2;
+  background: #bf10fd;
   color: white;
 }
 
@@ -124,7 +124,7 @@ body {
 
 <div class="header">
   <h1>StyxNet.</h1>
-  <p>A <b>StyxNet - a open source, uncensored and free</b> social network.</p>
+  <p>a <b>open source, uncensored and free</b> social network.</p>
 </div>
 
 <div class="navbar">
