--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <title>Page Title</title>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -17,7 +18,7 @@ body {
 
 /* Header/logo Title */
 .header {
-  padding: 80px;
+  padding: 10px;
   text-align: center;
   background: #bf10fd;
   color: white;
@@ -129,9 +130,9 @@ body {
 
 <div class="navbar">
   <a href="#" class="active">Home</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#" class="right">Link</a>
+  <a href="news">News</a>
+  <a href="why">Why StyxNet?</a>
+  <a href="https://github.com/TeamStyx/net" class="right">Contribute using GitHub</a>
 </div>
 
 <div class="row">
@@ -162,7 +163,7 @@ body {
 </div>
 
 <div class="footer">
-  <h2>Footer</h2>
+  <p>MIT LICENSE</p>
 </div>
 
 </body>
