--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body {
 .header {
   padding: 10px;
   text-align: center;
-  background: #bf10fd;
+  background-image: url('https://cdn.pixabay.com/photo/2016/05/22/19/15/background-1409028_1280.png');"
   color: white;
 }
 
@@ -135,35 +135,19 @@ body {
   <a href="https://github.com/TeamStyx/net" class="right">Contribute using GitHub</a>
 </div>
 
-<div class="row">
-  <div class="side">
-    <h2>About Me</h2>
-    <h5>Photo of me:</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-    <h3>More Text</h3>
-    <p>Lorem ipsum dolor sit ame.</p>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div>
-  </div>
-  <div class="main">
-    <h2>TITLE HEADING</h2>
-    <h5>Title description, Dec 7, 2017</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+<div class="main">
+    <h2>We're now at Twitter!</h2>
+    <h5>August, 30th</h5>
+    <p>Follow <a href="https://twitter.com/styxnet1">@styxnet1 at Twitter</a> for updates</p>
     <br>
-    <h2>TITLE HEADING</h2>
-    <h5>Title description, Sep 2, 2017</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    <h2>We need YOUR help!</h2>
+    <h5>August, 30th</h5>
+    <p>You can contribute to the project using GitHub. Help us designing, coding, make feedback, report errors or security issues and more! We will credit all the supporters at the official release of StyxNet.</p>
   </div>
 </div>
 
 <div class="footer">
-  <p>MIT LICENSE</p>
+  <p>Header image by <a href="https://pixabay.com/users/DavidRockDesign-2595351/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1409028">DavidRockDesign</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1409028">Pixabay</a></p>
 </div>
 
 </body>
