--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@ body {
 .header {
   padding: 10px;
   text-align: center;
-  background-image: url('https://cdn.pixabay.com/photo/2016/05/22/19/15/background-1409028_1280.png');"
+  background-image: url('https://cdn.pixabay.com/photo/2016/05/22/19/15/background-1409028_1280.png');
   color: white;
 }
 
 /* Increase the font size of the heading */
 .header h1 {
   font-size: 40px;
+  color: white;
 }
 
 /* Sticky navbar - toggles between relative and fixed, depending on the scroll position. It is positioned relative until a given offset position is met in the viewport - then it "sticks" in place (like position:fixed). The sticky value is not supported in IE or Edge 15 and earlier versions. However, for these versions the navbar will inherit default position */
@@ -125,7 +126,7 @@ body {
 
 <div class="header">
   <h1>StyxNet.</h1>
-  <p>a <b>open source, uncensored and free</b> social network.</p>
+  <p>an open source, uncensored and free social network.</p>
 </div>
 
 <div class="navbar">
