--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ body {
 <div class="main">
     <h2>We're now at Twitter!</h2>
     <h5>August, 30th</h5>
-    <p>Follow <a href="https://twitter.com/styxnet1">@styxnet1 at Twitter</a> for updates</p>
+    <p>Follow <a href="https://twitter.com/styxnet1">@styxnet_ at Twitter</a> for updates</p>
     <br>
     <h2>We need YOUR help!</h2>
     <h5>August, 30th</h5>
@@ -149,6 +149,7 @@ body {
 
 <div class="footer">
   <p>Header image by <a href="https://pixabay.com/users/DavidRockDesign-2595351/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1409028">DavidRockDesign</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1409028">Pixabay</a></p>
+  <p>Content is available under <a herf="https://choosealicense.com/licenses/mit/">MIT-License</a> unless otherwise noted.</p>
 </div>
 
 </body>
