--- a/why.html
+++ b/why.html
@@ -14,14 +14,13 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
-  color: white;
 }
 
 /* Header/logo Title */
 .header {
   padding: 10px;
   text-align: center;
-  background-image: url('https://cdn.pixabay.com/photo/2018/01/26/06/01/pattern-3107886_1280.png');
+  background-image: url('https://cdn.pixabay.com/photo/2016/05/22/19/15/background-1409028_1280.png');
   color: white;
 }
 
@@ -83,7 +82,7 @@ body {
 .side {
   -ms-flex: 30%; /* IE10 */
   flex: 30%;
-  background-color: #000000;
+  background-color: #f1f1f1;
   padding: 20px;
 }
 
@@ -91,13 +90,13 @@ body {
 .main {   
   -ms-flex: 70%; /* IE10 */
   flex: 70%;
-  background-color: rgb(39, 39, 39);
+  background-color: white;
   padding: 20px;
 }
 
 /* Fake image, just for this example */
 .fakeimg {
-  background-color: rgb(46, 46, 46);
+  background-color: #aaa;
   width: 100%;
   padding: 20px;
 }
@@ -106,17 +105,7 @@ body {
 .footer {
   padding: 20px;
   text-align: center;
-  background: rgb(46, 46, 46);
-}
-
-/* Links */
-a {
-  color:rgb(199, 199, 199);
-}
-
-/* Unsorted List */
-li {
-  color: white;
+  background: #ddd;
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
@@ -144,53 +133,24 @@ li {
 
 <div class="navbar">
   <a href="#" class="active">Home</a>
-  <a href="https://twitter.com/styxnet_">News</a>
-  <a href="#why">Why StyxNet?</a>
+  <a href="news">News</a>
+  <a href="why">Why StyxNet?</a>
   <a href="#" class="right">VIEW BETA</a>
 </div>
 
 <div class="main">
-    <h1></h1>
-
-    <h1>UPDATES</h1>
-    <h2>We're now at Twitter</h2>
+    <h2>Why you should </h2>
     <h5>August, 30th</h5>
-    <p>Follow <a href="https://twitter.com/styxnet_">@styxnet_</a> at Twitter for updates</p>
-
+    <p>Follow <a href="https://twitter.com/styxnet1">@styxnet_ at Twitter</a> for updates</p>
     <br>
-    
-    <h2>We need YOUR help</h2>
+    <h2>We need YOUR help!</h2>
     <h5>August, 30th</h5>
     <p>You can <a href="https://github.com/TeamStyx/net">contribute to the project using GitHub</a>. Help us designing, coding, make feedback, report errors or security issues and more! We will credit all the supporters at the official release of StyxNet.</p>
-
-    <svg height="100" width="200">
-      <line x1="0" y1="50" x2="200" y2="50" style="stroke:rgb(255, 255, 255);stroke-width:3" />
-      Sorry, your browser does not support inline SVG.
-    </svg>
-
-    <h1 id="why">WHY STYXNET?</h1>
-    <h3>Let's take a look at StyxNet's best pros:</h2>
-    <ul>
-      <li>👨‍💻 Open Source</li>
-      <li>🌐 Uncensored</li>
-      <li>🚫 Ad-Free</li>
-      <li>🛡️ Secure</li>
-      <li>💲 No paid/premium versions</li>
-    
-    </ul>
-    <h3>Imagine...</h3>
-    <ul>
-      <li>an uncensored and free internet</li>
-      <li>not being worried about privacy</li>
-      <li>the fact that the project is open source and anyone can contribute</li>
-      <li>a place to chill, talk, hang out, and do everything you like</li>
-      <li>posting text, photos, videos and more in one network</li>
-    </ul>
   </div>
 </div>
 
 <div class="footer">
-  <p>Header image by <a href="https://pixabay.com/users/DavidRockDesign-2595351/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1409028">DavidRockDesign</a> from <a href="https://pixabay.com/">Pixabay</a></p>
+  <p>Header image by <a href="https://pixabay.com/users/DavidRockDesign-2595351/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1409028">DavidRockDesign</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1409028">Pixabay</a></p>
   <p>Content is available under <a herf="https://choosealicense.com/licenses/mit/">MIT-License</a> unless otherwise noted.</p>
 </div>
 
