--- a/index.html
+++ b/index.html
@@ -178,14 +178,15 @@ li {
       <li>💲 No paid/premium versions</li>
     
     </ul>
-    <h3>Imagine...</h3>
+    <h3>Do you like...</h3>
     <ul>
-      <li>an uncensored and free internet</li>
-      <li>not being worried about privacy</li>
-      <li>the fact that the project is open source and anyone can contribute</li>
-      <li>a place to chill, talk, hang out, and do everything you like</li>
-      <li>posting text, photos, videos and more in one network</li>
+      <li>...an uncensored and free internet?</li>
+      <li>...not being worried about privacy?</li>
+      <li>...the fact that a project is open source and anyone can contribute?</li>
+      <li>...a non-manipulated place, even in political topics?</li>
+      <li>...not paying for premium versions?</li>
     </ul>
+    <p>Then you might like our project! If you want to, you can post <b><a href="https://twitter.com/hashtag/reasonstforstyxnet">#ReasonsForStyxNet</a></b> at Twitter.</p>
   </div>
 </div>
 
