--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@ li {
     
     <h2>We need YOUR help</h2>
     <h5>August, 30th</h5>
-    <p>You can <a href="https://github.com/TeamStyx/net">contribute to the project using GitHub</a>. Help us designing, coding, make feedback, report errors or security issues and more! We will credit all the supporters at the official release of StyxNet.</p>
+    <p>You can <a href="https://github.com/TeamStyx/net">contribute to the project using GitHub</a>. Help us designing, coding, make feedback, <br>
+      report errors or security issues and more! We will credit all the supporters at the official release of StyxNet.</p>
 
     <svg height="100" width="200">
       <line x1="0" y1="50" x2="200" y2="50" style="stroke:rgb(255, 255, 255);stroke-width:3" />
@@ -186,7 +187,7 @@ li {
       <li>...a non-manipulated place, even in political topics?</li>
       <li>...not paying for premium versions?</li>
     </ul>
-    <p>Then you might like our project! If you want to, you can post <b><a href="https://twitter.com/hashtag/reasonstforstyxnet">#ReasonsForStyxNet</a></b> at Twitter.</p>
+    <p>Then you might like our project! If you want to, you can post <b><a href="https://twitter.com/hashtag/ReasonsForStyxNet">#ReasonsForStyxNet</a></b> at Twitter.</p>
   </div>
 </div>
 
