--- a/index.html
+++ b/index.html
@@ -194,6 +194,9 @@ li {
 <div class="footer">
   <p>Header image by <a href="https://pixabay.com/users/DavidRockDesign-2595351/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1409028">DavidRockDesign</a> from <a href="https://pixabay.com/">Pixabay</a></p>
   <p>Content is available under <a herf="https://choosealicense.com/licenses/mit/">MIT-License</a> unless otherwise noted.</p>
+  <p>This page does not collect any cookies or any kind of data, which is not 100% necessary for this website to work properly.</p>
+  <p>Also, this page does not use any third-party systems, except for GitHub.</p>
+  <p> <a href="mailto:neostyx@pm.me"> E-Mail</a></p>
 </div>
 
 </body>
