--- a/index.html
+++ b/index.html
@@ -146,13 +146,15 @@ li {
   <a href="#" class="active">Home</a>
   <a href="https://twitter.com/styxnet_">News</a>
   <a href="#why">Why StyxNet?</a>
-  <a href="#" class="right">VIEW BETA</a>
+  <a href="#" class="right">TRY DEVELOPEMENT VERSION</a>
 </div>
 
 <div class="main">
-    <h1></h1>
-
     <h1>UPDATES</h1>
+    <h2>Planning the system...</h2>
+    <h5>August, 31th</h5>
+    <p>We're working on the system right now and how we are going to create it. The "TRY DEVELOPEMENT VERSION"-Button will work soon!</p>
+
     <h2>We're now at Twitter</h2>
     <h5>August, 30th</h5>
     <p>Follow <a href="https://twitter.com/styxnet_">@styxnet_</a> at Twitter for updates</p>
