--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ body {
 
 /* Active/current link */
 .navbar a.active {
-  background-color: #666;
+  background-color: rgb(0, 0, 0);
   color: white;
 }
 
@@ -155,6 +155,8 @@ li {
     <h5>August, 31th</h5>
     <p>We're working on the system right now and how we are going to create it. The "TRY DEVELOPEMENT VERSION"-Button will work soon!</p>
 
+    <br>
+    
     <h2>We're now at Twitter</h2>
     <h5>August, 30th</h5>
     <p>Follow <a href="https://twitter.com/styxnet_">@styxnet_</a> at Twitter for updates</p>
@@ -167,7 +169,7 @@ li {
       report errors or security issues and more! We will credit all the supporters at the official release of StyxNet.</p>
 
     <svg height="100" width="200">
-      <line x1="0" y1="50" x2="200" y2="50" style="stroke:rgb(255, 255, 255);stroke-width:3" />
+      <line x1="0" y1="50" x2="200" y2="50" style="stroke: darkorchid;stroke-width:3" />
       Sorry, your browser does not support inline SVG.
     </svg>
 
@@ -194,11 +196,24 @@ li {
 </div>
 
 <div class="footer">
+  <h3>Copyright</h3>
   <p>Header image by <a href="https://pixabay.com/users/DavidRockDesign-2595351/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1409028">DavidRockDesign</a> from <a href="https://pixabay.com/">Pixabay</a></p>
   <p>Content is available under <a herf="https://choosealicense.com/licenses/mit/">MIT-License</a> unless otherwise noted.</p>
+
+  <h3>Privacy</h3>
   <p>This page does not collect any cookies or any kind of data, which is not 100% necessary for this website to work properly.</p>
   <p>Also, this page does not use any third-party systems, except for GitHub.</p>
-  <p> <a href="mailto:neostyx@pm.me"> E-Mail</a></p>
+
+  <h3>Contact</h3>
+  <p><a href="mailto:neostyx@pm.me"> E-Mail</a></p>
+
+  <svg height="50" width="200">
+    <line x1="0" y1="25" x2="200" y2="25" style="stroke: darkorchid;stroke-width:3" />
+    Sorry, your browser does not support inline SVG.
+  </svg>
+
+  <h4><a href="#">↑ jump to top</a></h4>
+
 </div>
 
 </body>
