--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ li {
   <a href="#" class="active">Home</a>
   <a href="https://twitter.com/styxnet_">News</a>
   <a href="#why">Why StyxNet?</a>
-  <a href="#" class="right">TRY DEVELOPEMENT VERSION</a>
+  <a href="net.html" class="right">TRY DEVELOPEMENT VERSION</a>
 </div>
 
 <div class="main">
@@ -156,7 +156,7 @@ li {
     <p>We're working on the system right now and how we are going to create it. The "TRY DEVELOPEMENT VERSION"-Button will work soon!</p>
 
     <br>
-    
+
     <h2>We're now at Twitter</h2>
     <h5>August, 30th</h5>
     <p>Follow <a href="https://twitter.com/styxnet_">@styxnet_</a> at Twitter for updates</p>
