--- a/net.html
+++ b/net.html
@@ -1,2 +1,209 @@
-This page is under construction.
-We are sorry.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Home | StyxNet</title>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.png">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+/* Style the body */
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  color: white;
+}
+
+/* Header/logo Title */
+.header {
+  padding: 1px;
+  text-align: center;
+  background-image: url('https://cdn.pixabay.com/photo/2018/01/26/06/01/pattern-3107886_1280.png');
+  color: white;
+}
+
+/* Increase the font size of the heading */
+.header h1 {
+  font-size: 40px;
+  color: white;
+}
+
+/* Sticky navbar - toggles between relative and fixed, depending on the scroll position. It is positioned relative until a given offset position is met in the viewport - then it "sticks" in place (like position:fixed). The sticky value is not supported in IE or Edge 15 and earlier versions. However, for these versions the navbar will inherit default position */
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+}
+
+/* Style the navigation bar links */
+.navbar a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 20px;
+  text-decoration: none;
+}
+
+
+/* Right-aligned link */
+.navbar a.right {
+  background-color:darkorchid;
+  color: white;
+  float: right;
+}
+
+/* Login */
+.navbar a.login {
+    background-color: #333;
+    color: white;
+    float: right;
+}
+
+/* Change color on hover */
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Active/current link */
+.navbar a.active {
+  background-color: rgb(0, 0, 0);
+  color: white;
+}
+
+/* Column container */
+.row {  
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+}
+
+/* Create two unequal columns that sits next to each other */
+/* Sidebar/left column */
+.side {
+  -ms-flex: 30%; /* IE10 */
+  flex: 30%;
+  background-color: #000000;
+  padding: 20px;
+}
+
+/* Main column */
+.main {   
+  -ms-flex: 70%; /* IE10 */
+  flex: 70%;
+  background-color: rgb(39, 39, 39);
+  padding: 20px;
+}
+
+/* Fake image, just for this example */
+.fakeimg {
+  background-color: rgb(46, 46, 46);
+  width: 100%;
+  padding: 20px;
+}
+
+/* Footer */
+.footer {
+  padding: 20px;
+  text-align: center;
+  background: rgb(46, 46, 46);
+}
+
+/* Links */
+a {
+  color:rgb(199, 199, 199);
+}
+
+/* Unsorted List */
+li {
+  color: white;
+}
+
+.unread {
+    background-color: rgb(124, 89, 49);
+}
+
+/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 700px) {
+  .row {   
+    flex-direction: column;
+  }
+}
+
+/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
+@media screen and (max-width: 400px) {
+  .navbar a {
+    float: none;
+    width: 100%;
+  }
+}
+</style>
+</head>
+<body>
+
+<div class="header">
+  <h1>StyxNet.</h1>
+</div>
+
+<div class="navbar">
+  <a href="#" class="active">Home</a>
+  <a href="chats.html">Chats</a>
+  <a href="index.html">Information</a>
+  <a href="login.html" class="login">LOGIN</a>
+  <a href="create-account.html" class="right">CREATE ACCOUNT</a>
+</div>
+
+<div class="main">
+
+    <h1>Unread</h1>
+        <h2>LoremIpsum12</h2>
+
+        <h5>Today at 1:23 pm</h5>
+        <div class=unread>
+            <p>consectetur adipisici elit Quis aute iure reprehenderit in...</p>
+        </div>
+
+        <br>
+
+        <h2>DolorSit98</h2>
+        <h5>Today at 1:12 pm</h5>
+        <div class=unread>
+            <p>sed eiusmod tempor incidunt ut labore et dolore magna aliqua...</p>
+        </div>
+
+    <h1>Recent</h1>
+        <h2>Amet01</h2>
+        <h5>Today at 09:43 am</h5>
+        <p>Excepteur sint obcaecat cupiditat non proident, sunt in culpa...</p>
+</div>
+
+<div class="footer">
+  <h3>Copyright</h3>
+  <p>Header image by <a href="https://pixabay.com/users/DavidRockDesign-2595351/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=1409028">DavidRockDesign</a> from <a href="https://pixabay.com/">Pixabay</a></p>
+  <p>Content is available under <a herf="https://choosealicense.com/licenses/mit/">MIT-License</a> unless otherwise noted.</p>
+
+  <h3>Privacy</h3>
+  <p>This page does not collect any cookies or any kind of data, which is not 100% necessary for this website to work properly.</p>
+  <p>Also, this page does not use any third-party systems, except for GitHub.</p>
+
+  <h3>Contact</h3>
+  <p><a href="mailto:neostyx@pm.me"> E-Mail</a></p>
+
+  <svg height="50" width="200">
+    <line x1="0" y1="25" x2="200" y2="25" style="stroke: darkorchid;stroke-width:3" />
+    Sorry, your browser does not support inline SVG.
+  </svg>
+
+  <h4><a href="#">↑ jump to top</a></h4>
+
+</div>
+
+</body>
+</html>
