--- a/net.html
+++ b/net.html
@@ -7,57 +7,61 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 /* Style the body */
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-  color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    color: white;
 }
 
 /* Header/logo Title */
 .header {
-  padding: 1px;
-  text-align: center;
-  background-image: url('https://cdn.pixabay.com/photo/2018/01/26/06/01/pattern-3107886_1280.png');
-  color: white;
+    padding: 1px;
+    text-align: center;
+    background-image: url('https://cdn.pixabay.com/photo/2018/01/26/06/01/pattern-3107886_1280.png');
+    color: white;
 }
 
 /* Increase the font size of the heading */
 .header h1 {
-  font-size: 40px;
-  color: white;
+    font-size: 40px;
+    color: white;
 }
 
 /* Sticky navbar - toggles between relative and fixed, depending on the scroll position. It is positioned relative until a given offset position is met in the viewport - then it "sticks" in place (like position:fixed). The sticky value is not supported in IE or Edge 15 and earlier versions. However, for these versions the navbar will inherit default position */
 .navbar {
-  overflow: hidden;
-  background-color: #333;
-  position: sticky;
-  position: -webkit-sticky;
-  top: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
 }
 
 /* Style the navigation bar links */
 .navbar a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 20px;
-  text-decoration: none;
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
 }
 
 
 /* Right-aligned link */
 .navbar a.right {
-  background-color:darkorchid;
-  color: white;
-  float: right;
+    background-color:darkorchid;
+    color: white;
+    float: right;
 }
 
+/* Search Bar */
+.navbar a.search {
+    background-color: rgb(92, 92, 92) 77);
+}
 /* Login */
 .navbar a.login {
     background-color: #333;
@@ -67,81 +71,90 @@ body {
 
 /* Change color on hover */
 .navbar a:hover {
-  background-color: #ddd;
-  color: black;
+    background-color: #ddd;
+    color: black;
 }
 
 /* Active/current link */
 .navbar a.active {
-  background-color: rgb(0, 0, 0);
-  color: white;
+    background-color: rgb(0, 0, 0);
+    color: white;
 }
 
 /* Column container */
 .row {  
-  display: -ms-flexbox; /* IE10 */
-  display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
-  flex-wrap: wrap;
+    display: -ms-flexbox; /* IE10 */
+    display: flex;
+    -ms-flex-wrap: wrap; /* IE10 */
+    flex-wrap: wrap;
 }
 
 /* Create two unequal columns that sits next to each other */
 /* Sidebar/left column */
 .side {
-  -ms-flex: 30%; /* IE10 */
-  flex: 30%;
-  background-color: #000000;
-  padding: 20px;
+    -ms-flex: 30%; /* IE10 */
+    flex: 30%;
+    background-color: #000000;
+    padding: 20px;
 }
 
 /* Main column */
 .main {   
-  -ms-flex: 70%; /* IE10 */
-  flex: 70%;
-  background-color: rgb(39, 39, 39);
-  padding: 20px;
+    -ms-flex: 70%; /* IE10 */
+    flex: 70%;
+    background-color: rgb(39, 39, 39);
+    padding: 100px;
 }
 
 /* Fake image, just for this example */
 .fakeimg {
-  background-color: rgb(46, 46, 46);
-  width: 100%;
-  padding: 20px;
+    background-color: rgb(46, 46, 46);
+    width: 100%;
+    padding: 20px;
 }
 
 /* Footer */
 .footer {
-  padding: 20px;
-  text-align: center;
-  background: rgb(46, 46, 46);
+    padding: 20px;
+    text-align: center;
+    background: rgb(46, 46, 46);
 }
 
 /* Links */
 a {
-  color:rgb(199, 199, 199);
+    color:rgb(199, 199, 199);
 }
 
 /* Unsorted List */
 li {
-  color: white;
+    list-style: none;
+}
+
+ul li::before {
+    content: "\2022";
+    color: red;
+    font-weight: bold;
+    display: inline-block; 
+    width: 1em;
+    margin-left: -1em;
 }
 
 .unread {
-    background-color: rgb(124, 89, 49);
+      background-color: rgb(124, 89, 49);
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
   .row {   
-    flex-direction: column;
+      flex-direction: column;
   }
 }
 
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
 @media screen and (max-width: 400px) {
   .navbar a {
-    float: none;
-    width: 100%;
+      float: none;
+      width: 100%;
   }
 }
 </style>
@@ -156,6 +169,7 @@ li {
   <a href="#" class="active">Home</a>
   <a href="chats.html">Chats</a>
   <a href="index.html">Information</a>
+  <a href="#" class="search">Search</a>
   <a href="login.html" class="login">LOGIN</a>
   <a href="create-account.html" class="right">CREATE ACCOUNT</a>
 </div>
@@ -177,6 +191,11 @@ li {
         <div class=unread>
             <p>sed eiusmod tempor incidunt ut labore et dolore magna aliqua...</p>
         </div>
+
+    <svg height="100" width="200">
+        <line x1="0" y1="50" x2="200" y2="50" style="stroke: darkorchid;stroke-width:3" />
+        Sorry, your browser does not support inline SVG.
+    </svg>
 
     <h1>Recent</h1>
         <h2>Amet01</h2>
